--- a/Asyari/templates/data/navbar.html
+++ b/Asyari/templates/data/navbar.html
@@ -8,9 +8,31 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
+        {% if user.is_authenticated %}
             <a class="nav-link {% if menu == 'home' %} active {% endif %}" href="{% url 'home' %}">Dashboard</a>
             <a class="nav-link {% if menu == 'products' %} active {% endif %}" href="{% url 'products' %}">Product</a>
-            {% comment %} <a class="nav-link {% if menu == 'custumer' %} active {% endif %}" href="{% url 'custumer' %}">Custumer</a> {% endcomment %}
+            {% comment %} <a class="nav-link {% if menu == 'custumer' %} active {% endif %}"
+                href="{% url 'custumer' %}">Custumer</a> {% endcomment %}
+        {% else %}
+            <a class="navlink active" href="#"><b>Silakan Login terlebih dahulu</b></a>
+        {% endif %}
         </div>
     </div>
+    <ul class="navbar-nav">
+    {% if user.is_authenticated %}
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Helo, {{ request.user }} </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+        </li>
+    {% else %}
+        <li class="nav-item">
+            <a class="nav-link {% if menu == 'login' %} active {% endif %}" href="{% url 'login' %}" href="#">Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link {% if menu == 'register' %} active {% endif %}" href="{% url 'register' %}" href="#">Register</a>
+        </li>
+    {% endif %}
+    </ul>
 </nav>
